--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4",
+    "mongoose": "^8.2.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   },
   "type": "module"
